position joining nodes to avoid overlapping each other. tx animation speed is decreased

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ table {
     font-size: 13px;
     border-collapse: collapse;
     box-shadow: 0px 3px 5px #c5c5c5;
+    background: #fff;
 }
 
 tr {
